[gd_scene load_steps=4 format=3 uid="uid://c1bhi5m51nhgu"]

[ext_resource type="Script" uid="uid://bb5jm2a8wlx2l" path="res://scripts/start_screen.gd" id="1_tx5wa"]
[ext_resource type="Texture2D" uid="uid://dj0ioehiaq7vc" path="res://assets/Textures/Titel_Texture.png" id="2_he1sj"]
[ext_resource type="Texture2D" uid="uid://dovpvjjl27aer" path="res://assets/Textures/Graphic_Texture.png" id="3_r2jwc"]

[node name="StartScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tx5wa")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="TextureRect" type="TextureRect" parent="ColorRect"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -458.0
offset_top = 86.0
offset_right = -36.0
offset_bottom = 316.0
grow_horizontal = 0
texture = ExtResource("2_he1sj")
expand_mode = 1

[node name="TextureRect2" type="TextureRect" parent="ColorRect"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 85.0
offset_top = -650.0
offset_right = 733.0
offset_bottom = -2.0
grow_vertical = 0
texture = ExtResource("3_r2jwc")
expand_mode = 4

[node name="Label" type="Label" parent="ColorRect"]
visible = false
modulate = Color(0, 0, 0, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -144.0
offset_top = -63.0
offset_right = 120.0
offset_bottom = 74.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 100
text = "TITLE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="ColorRect"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 272.0
offset_top = -276.0
offset_right = 424.0
offset_bottom = -187.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 42
text = "START"

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -176.5
offset_top = -72.0
offset_right = -32.5
offset_bottom = -24.0
grow_horizontal = 0
grow_vertical = 0
alignment = 1

[node name="DE_Button" type="Button" parent="ColorRect/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "DE"

[node name="EN_Button" type="Button" parent="ColorRect/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "EN"

[node name="FR_Button" type="Button" parent="ColorRect/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "FR"

[connection signal="button_up" from="ColorRect/Button" to="." method="_on_button_button_up"]
[connection signal="button_up" from="ColorRect/HBoxContainer/DE_Button" to="." method="_on_de_button_button_up"]
[connection signal="button_up" from="ColorRect/HBoxContainer/EN_Button" to="." method="_on_en_button_button_up"]
[connection signal="button_up" from="ColorRect/HBoxContainer/FR_Button" to="." method="_on_fr_button_button_up"]
